src/test/06-Errors/error-after-multiline-string-2.txt
error-after-multiline-string-2.ck:10:9: error: cannot resolve operator '=>' on types 'int[]' and 'int[]'...
[10] [1,2,3] => int bar[];
             ^
error-after-multiline-string-2.ck:10:9: error: ...(note: use '@=>' for object reference assignment)
[10] [1,2,3] => int bar[];
             ^
